# StactiveRecord

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.markdown  TODO  aclocal.m4  autogen.sh  configure  configure.ac  cud_property_register.cpp  cud_property_register.h  doxygen.conf  exampledescription.markdown  exception.h  index.markdown  libstactiverecord.pc.in  manytomany.markdown  mysql_test.cpp  obj_group.cpp  obj_group.h  onetomany.markdown  onetoone.markdown  query.cpp  query.h  record.cpp  record.h  releases.markdown  stactive_record.h  test.cpp  types.h  usage.markdown  utils.cpp  utils.h
_layouts/: base.html
apidocs/: annotated.html  classes.html  classstactiverecord_1_1_c_u_d_property_register-members.html  classstactiverecord_1_1_c_u_d_property_register.html  classstactiverecord_1_1_date_time-members.html  classstactiverecord_1_1_date_time.html  classstactiverecord_1_1_k_v_t-members.html  classstactiverecord_1_1_k_v_t.html  classstactiverecord_1_1_obj_group-members.html  classstactiverecord_1_1_obj_group.html  classstactiverecord_1_1_q-members.html  classstactiverecord_1_1_q.html  classstactiverecord_1_1_record-members.html  classstactiverecord_1_1_record.html  classstactiverecord_1_1_row-members.html  classstactiverecord_1_1_row.html  classstactiverecord_1_1_sar___assertion_failed_exception-members.html  classstactiverecord_1_1_sar___assertion_failed_exception.html  classstactiverecord_1_1_sar___column_not_found_exception-members.html  classstactiverecord_1_1_sar___column_not_found_exception.html  classstactiverecord_1_1_sar___d_b_exception-members.html  classstactiverecord_1_1_sar___d_b_exception.html  classstactiverecord_1_1_sar___dbi-members.html  classstactiverecord_1_1_sar___dbi.html  classstactiverecord_1_1_sar___exception-members.html  classstactiverecord_1_1_sar___exception.html  classstactiverecord_1_1_sar___invalid_classname_exception-members.html  classstactiverecord_1_1_sar___invalid_classname_exception.html  classstactiverecord_1_1_sar___invalid_configuration_exception-members.html  classstactiverecord_1_1_sar___invalid_configuration_exception.html  classstactiverecord_1_1_sar___invalid_date_exception-members.html  classstactiverecord_1_1_sar___invalid_date_exception.html  classstactiverecord_1_1_sar___no_such_object_exception-members.html  classstactiverecord_1_1_sar___no_such_object_exception.html  classstactiverecord_1_1_sar___no_such_property_exception-members.html  classstactiverecord_1_1_sar___no_such_property_exception.html  classstactiverecord_1_1_sar___record_not_found_exception-members.html  classstactiverecord_1_1_sar___record_not_found_exception.html  classstactiverecord_1_1_sar_map-members.html  classstactiverecord_1_1_sar_map.html  (+27 more)
apidocs/search/: all_63.html  all_64.html  all_66.html  all_67.html  all_69.html  all_6f.html  all_71.html  all_72.html  all_73.html  all_75.html  all_77.html  classes_63.html  classes_64.html  classes_6b.html  classes_6d.html  classes_6f.html  classes_71.html  classes_72.html  classes_73.html  classes_77.html  enums_63.html  enums_77.html  functions_61.html  functions_63.html  functions_64.html  functions_65.html  functions_6f.html  functions_71.html  functions_72.html  functions_73.html  functions_74.html  namespaces_73.html  search.js
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
css/: syntax.css
examples/: Makefile.am  Makefile.in  README  dbs.cpp  example.cpp  many_to_many.cpp  one_to_many.cpp  one_to_one.cpp  querying.cpp  simple.cpp
src/: Makefile.am  query.cpp  stactive_record.h
stactiverecord/: Makefile.am  Makefile.in  config.h.in  cud_property_register.cpp  cud_property_register.h  datetime.cpp  datetime.h  exception.h  query.cpp  query.h  record.cpp  record.h  stactive_record.h  storage.h  types.h  utils.cpp  utils.h  where.cpp  where.h
stactiverecord/storage/: bdb_storage.cpp  mysql_storage.cpp  postgresql_storage.cpp  sar_dbi.cpp  sqlite_storage.cpp  storage.h
storage/: bdb_storage.cpp  mysql_storage.cpp  sar_dbi.cpp  sqlite_storage.cpp  storage.h
tests/: Makefile.am  Makefile.in  db_test.cpp  example.cpp  object_test.cpp  query_test.cpp  run_tests.sh  test_map.cpp
