noinst_PROGRAMS = dbs many_to_many one_to_many one_to_one querying simple

HEADERDIR = ../stactiverecord

dbs_SOURCES = dbs.cpp  
dbs_LDFLAGS = -lstactiverecord -L$(HEADERDIR)/.libs

many_to_many_SOURCES = many_to_many.cpp  
many_to_many_LDFLAGS = -lstactiverecord -L$(HEADERDIR)/.libs

one_to_many_SOURCES = one_to_many.cpp  
one_to_many_LDFLAGS = -lstactiverecord -L$(HEADERDIR)/.libs

one_to_one_SOURCES = one_to_one.cpp  
one_to_one_LDFLAGS = -lstactiverecord -L$(HEADERDIR)/.libs

querying_SOURCES = querying.cpp  
querying_LDFLAGS = -lstactiverecord -L$(HEADERDIR)/.libs

simple_SOURCES = simple.cpp  
simple_LDFLAGS = -lstactiverecord -L$(HEADERDIR)/.libs
