noinst_PROGRAMS = dbs many_to_many one_to_many one_to_one querying simple

LIBDIR = ../stactiverecord

dbs_SOURCES = dbs.cpp  
dbs_LDFLAGS = -lstactiverecord -L$(LIBDIR)/.libs
dbs_CPPFLAGS = -I..

many_to_many_SOURCES = many_to_many.cpp  
many_to_many_LDFLAGS = -lstactiverecord -L$(LIBDIR)/.libs
many_to_many_CPPFLAGS = -I..

one_to_many_SOURCES = one_to_many.cpp  
one_to_many_LDFLAGS = -lstactiverecord -L$(LIBDIR)/.libs
one_to_many_CPPFLAGS = -I..

one_to_one_SOURCES = one_to_one.cpp  
one_to_one_LDFLAGS = -lstactiverecord -L$(LIBDIR)/.libs
one_to_one_CPPFLAGS = -I..

querying_SOURCES = querying.cpp  
querying_LDFLAGS = -lstactiverecord -L$(LIBDIR)/.libs
querying_CPPFLAGS = -I..

simple_SOURCES = simple.cpp  
simple_LDFLAGS = -lstactiverecord -L$(LIBDIR)/.libs
simple_CPPFLAGS = -I..